# probfit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.markdown  README.rst  cball_fit.py  debug_pyminuit.py  genc  pyproject.toml  run1.py  run2.py  run3.py  run4.py  setup.cfg  setup.py  tutorial.ipynb  tutorial.py
.github/workflows/: main.yml  wheels.yml
ci/: install.sh  run.sh
dist_fit/: RTMinuit.py  __init__.py  cdist_fit.c  cdist_fit.html  cdist_fit.pyx  cdist_func.c  cdist_func.html  cdist_func.pxd  cdist_func.pyx  common.c  common.html  common.pyx  oneshot.py  util.py
doc/: Makefile  api.rst  conf.py  development.rst  index.rst  recipe.rst  rtd-pip-requirements  tutorial.html
doc/_themes/armstrong/: layout.html
doc/_themes/armstrong/static/: rtd.css_t
doc/pyplots/costfunc/: blh.py  bx2.py  simul.py  ulh.py  x2r.py
doc/pyplots/functor/: addpdf.py  addpdfnorm.py
doc/pyplots/pdf/: argus.py  cauchy.py  cauchy_bw.py  cruijff.py  crystalball.py  doublecrystalball.py  doublegaussian.py  exponential.py  gaussian.py  histogrampdf.py  johnsonSU.py  novosibirsk.py  polynomial.py  ugaussian.py
probfit/: __init__.py  _libstat.c  _libstat.html  _libstat.pxd  _libstat.pyx  cdist_fit.c  cdist_fit.html  cdist_fit.pyx  cdist_func.c  cdist_func.html  cdist_func.pxd  cdist_func.pyx  common.c  common.html  common.pyx  costfunc.c  costfunc.html  costfunc.pyx  decorator.py  functor.c  functor.html  functor.pxd  functor.pyx  funcutil.c  funcutil.html  funcutil.pyx  log1p.h  log1p_patch.pxi  nputil.py  oneshot.py  pdf.c  pdf.html  pdf.pxd  pdf.pyx  plotting.py  probfit_warnings.py  py23_compat.py  stat_util.py  statutil.py  toy.c  (+4 more)
src/: __init__.py  dist_fit.pyx
test/: testfit.py  testfunc.py  testfunctor.py  testoneshot.py  testplotting.py  testtoy.py  testutil.py
tests/: _test_plotting.py  conftest.py  test_fit.py  test_func.py  test_functor.py  test_oneshot.py  test_plotting.py  test_toy.py  test_util.py
tutorial/: tutorial.ipy  tutorial.ipynb  tutorial.py
