[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython<3",
    "oldest-supported-numpy",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-extras = "test"
test-command = "pytest {project}/tests"
manylinux_x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
skip = ["pp*", "*musllinux*"]

[[tool.cibuildwheel.overrides]]
select = "cp3{6,7,8}-*"
manylinux_x86_64-image = "manylinux1"
manylinux-i686-image = "manylinux1"

[[tool.cibuildwheel.overrides]]
select = "cp39-*"
manylinux_x86_64-image = "manylinux2010"
manylinux-i686-image = "manylinux2010"
