[metadata]
name = probfit
description = Distribution Fitting/Regression Library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/probfit
author = Piti Ongmongkolkul
author_email = piti118@gmail.com
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 7 - Inactive
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    iminuit<1.4; python_version <"3.5"
    iminuit<2; python_version >="3.5"
    numpy
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
zip_safe = False

[options.extras_require]
dev =
    matplotlib>=2.0
    pytest>=4.6
    pytest-cov
    pytest-mpl<0.11; python_version <"3.6"
    pytest-mpl; python_version >="3.6"
docs =
    ipython
    sphinx
    sphinx_rtd_theme
test =
    pytest>=4.6
    pytest-cov
    pytest-mpl<0.11; python_version <"3.6"
    pytest-mpl; python_version >="3.6"

[options.packages.find]
include =
    probfit

[check-manifest]
ignore =
    doc/**
    .*
    *.c


[tool:isort]
profile = black
multi_line_output = 3

[flake8]
max-complexity = 14
# E731: assign a lambda
# F403: import *
# F405: undefined or star import
# E741: ambiguous variable name l
ignore = E203, E231, E501, E722, W503, B950, E731, E741
select = C,E,F,W,B,B9
per-file-ignores =
  probfit/__init__.py: F403, F405
  doc/conf.py: E402, E265
