[metadata]
name = probfit
description = Distribution Fitting/Regression Library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/probfit
author = Piti Ongmongkolkul
author_email = piti118@gmail.com
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 7 - Inactive
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    iminuit<2
    numpy
python_requires = >=3.6
zip_safe = False

[options.packages.find]
include =
    probfit

[options.extras_require]
dev =
    matplotlib>=2.0
    pytest>=6
    pytest-cov
    pytest-mpl
docs =
    ipython
    sphinx
    sphinx-rtd-theme
test =
    pytest>=6
    pytest-cov
    pytest-mpl

[check-manifest]
ignore =
    doc/**
    .*
    *.c
    tutorial/**

[tool:isort]
profile = black

[flake8]
max-complexity = 14
ignore =
    E203
    E231
    E501
    E722
    W503
    B950
    E731  # assign a lambda
    E741  # ambiguous variable name l
select = C,E,F,W,B,B9
per-file-ignores =
    probfit/__init__.py: F403, F405
    doc/conf.py: E402, E265
